--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
           </section>
           <aside class="sidebar">
             <h2 class="section-title">Tags</h2>
-            <ul class="list tags"></ul>
+            <ul class="list tags list-horizontal"></ul>
             <h2 class="section-title">Authors</h2>
             <ul class="list authors">
               <li>
