--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     id="template-tag-link"
                     type="text/x-handlebars-template"
                   >
-                    <li><a href='#tag-{{id}}'><span>{{tag}}</span></a></li>
+                    <li><a href='#tag-{{tag}}'><span>{{tag}}</span></a></li>
                   </script>
                 </ul>
               </div>
@@ -178,7 +178,7 @@
                     id="template-tag-link"
                     type="text/x-handlebars-template"
                   >
-                    <li><a href='#tag-{{id}}'><span>{{tag}}</span></a></li>
+                    <li><a href='#tag-{{tag}}'><span>{{tag}}</span></a></li>
                   </script>
                 </ul>
               </div>
@@ -221,7 +221,7 @@
                     id="template-tag-link"
                     type="text/x-handlebars-template"
                   >
-                    <li><a href='#tag-{{id}}'><span>{{tag}}</span></a></li>
+                    <li><a href='#tag-{{tag}}'><span>{{tag}}</span></a></li>
                   </script>
                 </ul>
               </div>
@@ -263,7 +263,7 @@
                     id="template-tag-link"
                     type="text/x-handlebars-template"
                   >
-                    <li><a href='#tag-{{id}}'><span>{{tag}}</span></a></li>
+                    <li><a href='#tag-{{tag}}'><span>{{tag}}</span></a></li>
                   </script>
                 </ul>
               </div>
@@ -307,7 +307,7 @@
                     id="template-tag-link"
                     type="text/x-handlebars-template"
                   >
-                    <li><a href='#tag-{{id}}'><span>{{tag}}</span></a></li>
+                    <li><a href='#tag-{{tag}}'><span>{{tag}}</span></a></li>
                   </script>
                 </ul>
               </div>
@@ -350,7 +350,7 @@
                     id="template-tag-link"
                     type="text/x-handlebars-template"
                   >
-                    <li><a href='#tag-{{id}}'><span>{{tag}}</span></a></li>
+                    <li><a href='#tag-{{tag}}'><span>{{tag}}</span></a></li>
                   </script>
                 </ul>
               </div>
@@ -394,7 +394,7 @@
                     id="template-tag-link"
                     type="text/x-handlebars-template"
                   >
-                    <li><a href='#tag-{{id}}'><span>{{tag}}</span></a></li>
+                    <li><a href='#tag-{{tag}}'><span>{{tag}}</span></a></li>
                   </script>
                 </ul>
               </div>
@@ -439,7 +439,7 @@
                     id="template-tag-link"
                     type="text/x-handlebars-template"
                   >
-                    <li><a href='#tag-{{id}}'><span>{{tag}}</span></a></li>
+                    <li><a href='#tag-{{tag}}'><span>{{tag}}</span></a></li>
                   </script>
                 </ul>
               </div>
@@ -487,7 +487,7 @@
                     id="template-tag-link"
                     type="text/x-handlebars-template"
                   >
-                    <li><a href='#tag-{{id}}'><span>{{tag}}</span></a></li>
+                    <li><a href='#tag-{{tag}}'><span>{{tag}}</span></a></li>
                   </script>
                 </ul>
               </div>
@@ -495,7 +495,17 @@
           </section>
           <aside class="sidebar">
             <h2 class="section-title">Tags</h2>
-            <ul class="list tags list-horizontal"></ul>
+            <ul class="list tags list-horizontal">
+              <script
+                id="template-tag-cloud-list"
+                type="text/x-handlebars-template"
+              >
+                {{#each tags}}
+                  <li><a href='#tag-{{tag}}' class='{{tagClass}}'>{{tag}}</a>
+                  </li>
+                {{/each}}
+              </script>
+            </ul>
             <h2 class="section-title">Authors</h2>
             <ul class="list authors">
               <li></li>
