--- a/index.html
+++ b/index.html
@@ -508,7 +508,16 @@
             </ul>
             <h2 class="section-title">Authors</h2>
             <ul class="list authors">
-              <li></li>
+              <script
+                id="template-author-list"
+                type="text/x-handlebars-template"
+              >
+                {{#each authors}}
+                  <li><a href='#author-{{authorID}}'>{{author}}</a><span
+                    >({{articleCount}})</span>
+                  </li>
+                {{/each}}
+              </script>
             </ul>
           </aside>
         </main>
